fixed pfps not showing up on mobile

--- a/stylesheets/components/_pfp.scss
+++ b/stylesheets/components/_pfp.scss
@@ -8,7 +8,6 @@
 	aspect-ratio: 1;
 	border: 1px solid #b5b5b5;
 	position: relative;
-	content: "ee";
 	&.small {
 		width: 30px;
 	}
