--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -378,7 +378,6 @@ li.flair .pfp {
   aspect-ratio: 1;
   border: 1px solid #b5b5b5;
   position: relative;
-  content: "ee";
 }
 .pfp.small {
   width: 30px;
